Dashboard layout bug fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10806,7 +10806,6 @@ h1, h2, h3, h4, h5, h6, a .event-summary, a .ev-lst-details, a.t-def:hover, a.t-
 
   .slot-4-6-img {
     min-height: 300px;
-    height: 100%;
   }
 }
 /* XL Extra large devices (large desktops, 1200px and up) */
