--- a/resources/css/ck.scss
+++ b/resources/css/ck.scss
@@ -554,7 +554,6 @@ fill: $bg-3
 		}
 		.slot-4-6-img {
 			min-height: 300px;
-			height: 100%;
 		}
 
 }
